--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,18 +8,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/download"
-
     >
 
+    <EditText
+        android:id="@+id/editTextTextName"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:hint="Name"
+        android:layout_marginTop="90sp"
+        android:layout_marginBottom="10sp"
+        android:textAlignment="center"
+        android:ems="10"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/round_edge"
+        android:backgroundTint="#2051616A"
+        android:inputType="text" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/editTextTextEmailAddressReg"
         android:layout_width="match_parent"
         android:layout_height="50sp"
         android:hint="Email"
         android:textAlignment="center"
         android:drawableLeft="@drawable/login"
-        android:layout_marginTop="190sp"
+        android:layout_marginTop="20sp"
         android:layout_marginBottom="20sp"
         android:ems="10"
         android:layout_gravity="center_horizontal"
@@ -28,7 +40,20 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/editTextTextBranch"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:hint="Branch"
+        android:layout_marginBottom="25sp"
+        android:textAlignment="center"
+        android:ems="10"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/round_edge"
+        android:backgroundTint="#2051616A"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword2Reg"
         android:layout_width="match_parent"
         android:layout_height="50sp"
         android:hint="Password"
@@ -41,17 +66,9 @@
         android:backgroundTint="#2051616A"
         android:inputType="text" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_edge"
-        android:backgroundTint="#43DBDDDF"
-        android:layout_marginTop="15sp"
-        android:text="Sign In" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/signupreg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15sp"
@@ -59,13 +76,6 @@
         android:background="@drawable/round_edge"
         android:text="Sign Up" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="31dp"
-        android:layout_marginTop="19sp"
-        android:text="Skip"
-        android:textAlignment="center"
-        android:textColor="#000000" />
+
 
 </LinearLayout>
