--- a/app/src/main/res/layout/activity_home_login.xml
+++ b/app/src/main/res/layout/activity_home_login.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/download"
-
-    >
+    android:alpha="0.8"
+    android:background="@drawable/round_layout_bg">
 
 
     <EditText
@@ -18,6 +16,7 @@
         android:layout_height="50sp"
         android:hint="Email"
         android:textAlignment="center"
+        android:alpha="1"
         android:drawableLeft="@drawable/login"
         android:layout_marginTop="190sp"
         android:layout_marginBottom="20sp"
