--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0277bd</color>
-    <color name="colorPrimaryDark">#004c8c</color>
-    <color name="colorAccent">#58a5f0</color>
+    <color name="colorPrimary">#e3f2fd</color>
+    <color name="colorPrimaryDark">#b1bfca</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="colorPrimaryText">#ffffff</color>
 </resources>
